# FastAPI_with_poetry

01_Poetry_init/: Poetry Commands.docx
01_Poetry_init/project_1/: README.md  pyproject.toml
01_Poetry_init/project_1/project_1/: main.py
01_Poetry_init/project_1/tests/: test_my_project.py
02_fastapi/fast_api_hello_world_online/: README.md  pyproject.toml
02_fastapi/fast_api_hello_world_online/fast_api_hello_world_online/: main.py
02_fastapi/fast_api_hello_world_online/tests/: test_main.py
