[tool.poetry]
name = "project-1"
version = "0.1.0"
description = ""
authors = ["Abdul-Qadir3 <aqadirsamdani@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
pytest = "^8.2.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
